[package]
name = "chat-service"
version = "0.1.0"
authors = ["Matúš Mrekaj <matus.mrekaj@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["full"] }
futures = "0.3.15"
tokio-stream = "0.1.7"
